fixing flexbox layout bugs on list pages for IE10 and IE11

--- a/pipeline/scss/layout/_list-pages.scss
+++ b/pipeline/scss/layout/_list-pages.scss
@@ -31,10 +31,16 @@ ul.contents-list {
         padding: .25em .5em;
         box-sizing: border-box;
         max-width: 100%;
+        header {
+          box-sizing: border-box;
+          max-width: 100%;
+        }
       }
       p {
         font-size: .8em;
         line-height: 1.2;
+        box-sizing: border-box;
+        max-width: 100%;
       }
     }
     @include MQ(M) {
